--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: movie_app
-description: "A new Flutter project."
+description: "A Flutter project that showcases a movie application."
 publish_to: 'none'
 version: 0.1.0
 
