--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,18 @@
 name: movie_app
 description: "A Flutter project that showcases a movie application."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
+
   flutter_bloc: ^8.1.5
+  hydrated_bloc: ^9.1.5
+  path_provider: ^2.1.3
   retrofit: ^4.1.0
   dio: ^5.4.3+1
   get_it: ^7.7.0
@@ -22,6 +24,8 @@ dependencies:
   intl: ^0.19.0
   geolocator: ^12.0.0
   geocoding: ^3.0.0
+  cached_network_image: ^3.3.1
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -37,13 +41,13 @@ flutter:
   uses-material-design: true
 
   assets:
-  - assets/images/
-  
+    - assets/images/
+
   fonts:
-  - family: Lato
-    fonts:
-      - asset: assets/fonts/Lato-Thin.ttf
-      - asset: assets/fonts/Lato-Light.ttf
-      - asset: assets/fonts/Lato-Regular.ttf
-      - asset: assets/fonts/Lato-Bold.ttf
-      - asset: assets/fonts/Lato-Black.ttf
+    - family: Lato
+      fonts:
+        - asset: assets/fonts/Lato-Thin.ttf
+        - asset: assets/fonts/Lato-Light.ttf
+        - asset: assets/fonts/Lato-Regular.ttf
+        - asset: assets/fonts/Lato-Bold.ttf
+        - asset: assets/fonts/Lato-Black.ttf
